writ document for store api
